--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -2,7 +2,7 @@ name: تحديث يومي لـ CYBERBRIEF
 
 on:
   schedule:
-    - cron: '5 3 * * *'   # كل يوم الساعة 5:05 صباحًا بتوقيت مصر بالضبط
+    - cron: '15 3 * * *'   # كل يوم الساعة 5:15 صباحًا بتوقيت مصر بالثانية
   workflow_dispatch:
 
 jobs:
@@ -14,7 +14,7 @@ jobs:
         with:
           python-version: '3.11'
       - run: pip install feedparser requests
-      - run: python daily_update.py
+      - run: python daily_news_collector.py   # أو daily_update.py حسب الاسم عندك
       - run: |
           git config user.name "CyberBot"
           git config user.email "bot@cyberbrief.com"
